# websearch

./: README.md  pyproject.toml  run.py
websearch/: __init__.py  logging.py  schema.py  scraper.py  tools.py  websearch.py
